10 Feb 2018
add: secure cookie store for userID
remove: userID from sessions
remove: call to undefined var arcade_top_scores.php
update: AJAX Chat polling timer
update:image_proxy function to match updated simple image proxy
update: prefer ogg over mp3 audio
add: missing ogg/wav sound files
add: anonymize url in advertise block

9 Feb 2018
fix: wrong user var used in recover.php

7 Feb 2018
update: a few minor fixes

5 Feb 2018
update: google books api, track api usage and disable if exceeded. cache only book data, not formatting
fix: birthday cleanup
update: books function check if empty
remove: duplicate trivia questions

4 Feb 2018
update: download torrent
update: delete torrent
update: edit torrent
update: add flush cache for UC_MAX
update: redis cache to choose database
update: trivia always autrefresh, hide days when lees than 1 day
update: rating when torrent not downloaded
update: queries block
fix: cache variable
add: cache stats for memcache, redis, apcu and files
hide: display of stats from all but staff

3 Feb 2018
fix: freeuser_update.php
add: redirect to login on no session
update: sql files

2 Feb 2018
fix: typo in site_config hnr
remove: duplicate, unused images
fix: rating system, using ajax
add: torrent search suggestions
move: create session variable salt to login function
fix: 350 millisecond page load delay on page refresh

1 Feb 2018
update: sql files
fix: code block bbcode on ajax chat
fix: users cache for AJAX Chat when staff add user
fix: session canary and regenerate session id
add: encrypted session data, may require delete current sessions
update: emails to html
add: mail class to send emails, adds headers and sennds both plain text and html versions or email
update: torrents scoller to force image dimensions, images all face-up

28 Jan 2018
update: wiki item formatting
update: catalog.php formatting remove bbcode from description
update: catalog.php formatting when no peers
add: catalog.php
update: alphabatize nav menu links